--- a/mobile/package.json
+++ b/mobile/package.json
@@ -50,6 +50,7 @@
     "react-native": "0.79.5",
     "react-native-calendars": "^1.1313.0",
     "react-native-gesture-handler": "~2.24.0",
+    "react-native-paystack-webview": "^5.0.1",
     "react-native-paper": "^5.14.5",
     "react-native-phone-number-input": "^2.1.0",
     "react-native-reanimated": "~3.17.4",
